tests/error/linear_errors/field_copy1.err
Error: Copy violation (at $FILE:14:11)
   | 
12 | def foo(s: MyStruct @owned) -> tuple[qubit, qubit]:
13 |     t = s
14 |     return s.q, t.q
   |            ^^^ Field `s.q` with non-copyable type `qubit` cannot be
   |                returned ...
   | 
13 |     t = s
   |         - since it was already moved here

Guppy compilation failed due to 1 previous error
